--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 		
 			<ul class="nav">
 				<li><a href="index.html" class="selected">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="#">Support</a></li>
-				<li><a href="#">Login</a></li>				
+				<li><a href="get-started.html">Get Started</a></li>
+				<li><a href="https://github.com/andrewdavey/cassette">GitHub</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			
 			</div>
